[gd_scene load_steps=2 format=3 uid="uid://cr5kmcmjsfmox"]

[ext_resource type="Script" uid="uid://doysqyf8d3r27" path="res://scenes/ui/debug/skills_panel.gd" id="1_hyrxc"]

[node name="SkillsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hyrxc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AgentIdEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "agent_id"
alignment = 1

[node name="SkillEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "guitar"
placeholder_text = "skill"
alignment = 1

[node name="MinutesSpin" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
max_value = 600.0
value = 60.0

[node name="PracticeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Practice"

[node name="Out" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[connection signal="pressed" from="VBoxContainer/PracticeBtn" to="." method="_on_practice_btn_pressed"]
